Release history for katriawm

next
  [Fixed]
  - We now use XRRGetMonitors(). In contrast to XRRGetScreenResources(),
    it does not cause the X server to hang for a few hundred
    milliseconds.

v17.09  2017-09-16
  [LICENSING]
  - The project has been relicensed under the MIT license (more
    precisely called "Expat License", but everyone calls it "MIT
    license" these days).

v17.05  2017-05-25
  [Fixed]
  - Moving the selected client to another workspace no longer breaks the
    function "switch to recent workspace".

  [Changed]
  - Urgency hints can now be temporarily "ignored" by katriawm, meaning
    there won't be any visual indicators showing urgency.

    This changes the format of the property _KATRIA_STATE on the root
    window!

  - katriabi now prints an actual error message if the size of
    _KATRIA_STATE doesn't match what it expects. This used to be a debug
    message, which is not helpful.

v17.04  2017-04-08
  [Fixed]
  - Aspect ratio size hints: We now only *shrink* windows when
    correcting the aspect ratio (if a certain aspect ratio is requested
    by a client). This fixes a bug where floating windows were larger
    than the screen after they have been maximized.

v17.02  2017-02-26
  [Changed]
  - All code specific to lemonbar has been removed, since it has been
    unmaintained for over a year.

  [Added]
  - The tutorial HOW-TO-SETUP.md has been added.

v16.12  2016-12-31
  - Minor maintenance release. No user-visible changes. I just wanted a
    clean start for 2017. :-)

v16.10  2016-10-29
  [Fixed]
  - Fix data corruption and possible crash when a client, which is
    currently being moved by the mouse, disappears.
  - Un-fullscreening clients now causes the current workspace to be
    rearranged. This fixes several bugs where you ended up with a
    "broken" tiled layout after un-fullscreening a client.

v16.09  2016-09-24
  [Fixed]
  - Limit the minimum size of windows: They can no longer be so small